refactoring test code, rename chids -> children some type parameters